Changes file for Date-Holidays

HEAD

- Added adapter for:
    Date::Holidays::GB addressing Github issue #4


0.20 2014.08.30 bug fix/feature release, update recommended

- Fixed bug in Date::Holidays::Adapter::FR, which wrongfully reported
  lack of implementation of is_holidays method when it was the holidays
  method - error being thrown upon call to holidays methods

- Added adapters for:
    Date::Holidays::CN
    Date::Holidays::KR
    Date::Holidays::PL

  Addressing Github issue #5

- First shot at improvement of Date::Holidays::Adapter code, this needs
  more work

- Improvements to the test suite, this also needs additional work

- Introducing use of Scalar::Util


0.19 2014.08.27 bug fix release, update not required (see below)

- This release addressed reports on failing tests for perl 5.21
  The use in this distribution of UNIVERSAL is now deprecated,
  see: Github issue [#3] and [RT:98337]


0.18 2014.08.24 feature release, update not required

- Added adapter class for Date::Holidays::BR [RT:63437]


0.17 2014.08.22 maintenance release, update not required

- Migrated from Module::Build to Dist::Zilla

- Fixed issue in some test, which would break if Date::Holidays::DK
  was not installed


0.16 2014.08.18 maintenance release, update not required

- Fixed POD error

- Aligned all version numbers

- Added t/kwalitee.t Test::Kwalitee test

- Added t/changes.t Test::CPAN::Changes test


0.15 2007.03.13 maintenance release, update not required

- Added t/perlcriticrc

- Updated t/critic.t to more contemporary version


0.14 2007.03.12 maintenance release, update not required

  Added the following (again) to MANIFEST as a result of the Kwalitee test:
    t/pod.t
    t/pod-coverage.t

  These had been removed from the distribution, but the kwalitee
  metrics likes them so, they are however not run as part of the
  normal test suite unless $TEST_POD is set in your environment.


0.13 2007.03.07 maintenance release, update not required
